--- a/params/homography_mapping.yaml
+++ b/params/homography_mapping.yaml
@@ -1,3 +1,3 @@
 # place here the mapping between cameras from low to high numbers
 # ex: [[0,1],[2,3],[4,5]]
-homography_mapping: [[0,1]]
+homography_mapping: [[0,1],[2,3],[4,5],[6,7],[8,9]]
