Use yaml_cpp_catkin if it can be found.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,18 @@ project(uvc_ros_driver)
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -Wno-format-security ${NEON_FLAGS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${NEON_FLAGS}")
 
+find_package(PkgConfig)
+
+find_package(yaml_cpp_catkin QUIET)
+if(${yaml_cpp_catkin_FOUND})
+  message(STATUS "Found yaml_cpp_catkin, using instead of system library.")
+  set(YamlCpp_LIBRARIES ${yaml_cpp_catkin_LIBRARIES})
+  set(YamlCpp_INCLUDE_DIRS ${yaml_cpp_catkin_INCLUDE_DIRS})
+else()
+  message(STATUS "No yaml_cpp_catkin, using yaml-cpp system library instead.")
+  pkg_check_modules(YamlCpp REQUIRED yaml-cpp>=0.5)
+endif()
+
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
@@ -117,7 +129,7 @@ catkin_package(
   LIBRARIES uvc_ros_driver
   CATKIN_DEPENDS roscpp roslib image_transport
 #  DEPENDS system_lib
-  DEPENDS yaml-cpp
+  DEPENDS YamlCpp
 )
 
 ###########
@@ -130,6 +142,7 @@ catkin_package(
 include_directories(
   ${catkin_INCLUDE_DIRS}
   ${Eigen3_INCLUDE_DIRS}
+  ${YamlCpp_INCLUDE_DIRS}
   include
   /usr/include/libusb-1.0
   src/nodes/c_library
@@ -147,7 +160,9 @@ add_library(uvc_ros_driver SHARED
 target_link_libraries(uvc_ros_driver
   yaml-cpp
   ${catkin_LIBRARIES}
+  #${LibUVC_LIBRARIES}
   /usr/local/lib/libuvc.so #TODO link by usign find_package
+  ${YamlCpp_LIBRARIES}
 )
 
 ## Add cmake target dependencies of the library
@@ -168,6 +183,7 @@ add_executable(uvc_ros_driver_node
 target_link_libraries(uvc_ros_driver_node
   uvc_ros_driver
   ${catkin_LIBRARIES}
+  ${YamlCpp_LIBRARIES}
 )
 
 #############
