--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -8,4 +8,4 @@ gen = ParameterGenerator()
 
 gen.add("CAMERA_AUTOEXP", bool_t, 0, "Enable auto exposure.", True)
 
-exit(gen.generate(PACKAGE, "uvc_ros_driver_node", "Driver"))
+exit(gen.generate(PACKAGE, "uvc_ros_driver", "UvcDriver"))
