--- a/package.xml
+++ b/package.xml
@@ -40,6 +40,7 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>libuvc</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
@@ -48,6 +49,7 @@
   <build_depend>ait_ros_messages</build_depend>
   <build_depend>roslib</build_depend>
   <build_depend>image_transport</build_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>libuvc</run_depend>
   <run_depend>roscpp</run_depend>
