Moved dynamic reconfigure options to uvc_ros_driver.h/*.cpp.

--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -6,6 +6,10 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("CAMERA_AUTOEXP", bool_t, 0, "Enable auto exposure.", True)
+gen.add("CAMERA_AUTOEXP", bool_t, 0, "Enable auto exposure AEC function.", True)
+gen.add("CAMERA_EXP", double_t, 0, "Exposure time when AEC disabled.", 40.0, 0.0, 480.0)
+gen.add("CAMERA_AUTOG", bool_t, 0, "Enable auto exposure AEC function.", True)
+gen.add("CAMERA_GAIN", double_t, 0, "Exposure time when AEC disabled.", 16.0, 16.0, 64.0)
+
 
 exit(gen.generate(PACKAGE, "uvc_ros_driver", "UvcDriver"))
