--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -11,5 +11,6 @@ gen.add("CAMERA_EXP", double_t, 0, "Exposure time when AEC disabled.", 40.0, 0.0
 gen.add("CAMERA_AUTOG", bool_t, 0, "Enable auto exposure AEC function.", True)
 gen.add("CAMERA_GAIN", double_t, 0, "Exposure time when AEC disabled.", 16.0, 16.0, 64.0)
 
+gen.add("ADIS_IMU", bool_t, 0, "Enable the external IMU.", False);
 
 exit(gen.generate(PACKAGE, "uvc_ros_driver", "UvcDriver"))
