Added two new parameters.

--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -8,6 +8,9 @@ gen = ParameterGenerator()
 
 gen.add("CAMERA_AUTOEXP", bool_t, 0, "Enable auto exposure AEC function.", True)
 gen.add("CAMERA_EXP", double_t, 0, "Exposure time when AEC disabled.", 40.0, 0.0, 480.0)
+gen.add("CAMERA_MIN_E", double_t, 0, "Minimum exposure time when AEC enabled", 0.0, 0.0, 480.0)
+gen.add("CAMERA_MAX_E", double_t, 0, "Maximum exposure time when AEC enabled", 480.0, 0.0, 480.0)
+
 gen.add("CAMERA_AUTOG", bool_t, 0, "Enable auto exposure AEC function.", True)
 gen.add("CAMERA_GAIN", double_t, 0, "Exposure time when AEC disabled.", 16.0, 16.0, 64.0)
 
