added disparity threshold param in dynamic reconfigure

--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -7,13 +7,16 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
 gen.add("CAMERA_AUTOEXP", bool_t, 0, "Enable auto exposure AEC function.", True)
-gen.add("CAMERA_EXP", double_t, 0, "Exposure time when AEC disabled.", 40.0, 0.0, 480.0)
-gen.add("CAMERA_MIN_E", double_t, 0, "Minimum exposure time when AEC enabled", 0.0, 0.0, 480.0)
-gen.add("CAMERA_MAX_E", double_t, 0, "Maximum exposure time when AEC enabled", 480.0, 0.0, 480.0)
+gen.add("CAMERA_EXP", int_t, 0, "Exposure time when AEC disabled.", 40.0, 0.0, 480.0)
+gen.add("CAMERA_MIN_E", int_t, 0, "Minimum exposure time when AEC enabled", 0.0, 0.0, 480.0)
+gen.add("CAMERA_MAX_E", int_t, 0, "Maximum exposure time when AEC enabled", 480.0, 0.0, 480.0)
+gen.add("STEREO_TH_CAM1", int_t, 0, "Disparity matching threshold value", 60, 0, 255)
+gen.add("STEREO_LR_CAM1", int_t, 0, "Disparity matching LR check value", 3, 0, 31)
+
 
 gen.add("CAMERA_AUTOG", bool_t, 0, "Enable auto exposure AEC function.", True)
-gen.add("CAMERA_GAIN", double_t, 0, "Exposure time when AEC disabled.", 16.0, 16.0, 64.0)
+gen.add("CAMERA_GAIN", int_t, 0, "Exposure time when AEC disabled.", 16.0, 16.0, 64.0)
 
-gen.add("ADIS_IMU", bool_t, 0, "Enable the external IMU.", True);
+gen.add("ADIS_IMU", bool_t, 0, "Enable the external IMU.", False);
 
 exit(gen.generate(PACKAGE, "uvc_ros_driver", "UvcDriver"))
