cleaned up, shifted rqt callback to end of init

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,7 +162,7 @@ add_library(uvc_ros_driver SHARED
 )
 
 target_link_libraries(uvc_ros_driver
-  yaml-cpp
+  #yaml-cpp
   ${catkin_LIBRARIES}
   #${LibUVC_LIBRARIES}
   /usr/local/lib/libuvc.so #TODO link by usign find_package
