--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -9,9 +9,10 @@ gen = ParameterGenerator()
 gen.add("CAMERA_AUTOEXP", bool_t, 0, "Enable auto exposure AEC function.", True)
 gen.add("CAMERA_EXP", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
 gen.add("CAMERA_MIN_E", int_t, 0, "Minimum exposure time when AEC enabled", 0, 0, 480)
-gen.add("CAMERA_MAX_E", int_t, 0, "Maximum exposure time when AEC enabled", 480, 0, 480)
+gen.add("CAMERA_MAX_E", int_t, 0, "Maximum exposure time when AEC enabled", 378, 0, 480)
 gen.add("CAMERA_AUTOG", bool_t, 0, "Enable auto exposure AEC function.", True)
 gen.add("CAMERA_GAIN", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("PRIMARY_CAM_MODE", bool_t, 0, "Enable primary camera pair mode.", False)
 
 gen.add("CAMERA_0_HFLIP", bool_t, 0, "Enable horizontal image flip", False)
 gen.add("CAMERA_0_VFLIP", bool_t, 0, "Enable vertical image flip.", False)
@@ -23,11 +24,8 @@ gen.add("STEREO_LR_CAM1", int_t, 0, "Disparity matching LR check value", 3, 0, 3
 gen.add("STEREO_OF_CAM1", int_t, 0, "Disparity range offset", 0, 0, 127)
 gen.add("STEREO_P1_CAM1", int_t, 0, "SGM penalty cost 1", 10, 0, 127)
 gen.add("STEREO_P2_CAM1", int_t, 0, "SGM penalty cost2", 250, 0, 255)
-gen.add("STEREO_EN_CAM1", bool_t, 0, "Enable disparity output.", False)
 gen.add("STEREO_RE_CAM1", bool_t, 0, "Enable disparity output.", False)
 gen.add("STEREO_CE_CAM1", bool_t, 0, "Enable disparity output.", False)
-
-gen.add("STEREO_EN_CAM3", bool_t, 0, "Enable disparity output.", False)
 
 gen.add("ADIS_IMU", bool_t, 0, "Enable the external IMU.", False);
 
