added camera_tile parameter, removed set_calibration

--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -14,6 +14,7 @@ gen.add("CAMERA_MAX_E", int_t, 0, "Maximum exposure time when AEC enabled", 378,
 gen.add("CAMERA_AUTOG", bool_t, 0, "Enable auto exposure AEC function.", True)
 gen.add("CAMERA_GAIN", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
 gen.add("PRIMARY_CAM_MODE", bool_t, 0, "Enable primary camera pair mode.", False)
+gen.add("CAMERA_TILE", bool_t, 0, "Enable camera tile mode", False)
 gen.add("STEREO_BAYER_D", bool_t, 0, "Disable bayer pattern removal", False)
 gen.add("ADIS_IMU", bool_t, 0, "Enable the external IMU.", False);
 
