added exposure parameters for all 10 cameras

--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -8,18 +8,16 @@ gen = ParameterGenerator()
 
 #general parameters
 gen.add("CAMERA_AUTOEXP", bool_t, 0, "Enable auto exposure AEC function.", True)
-gen.add("CAMERA_EXP", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
 gen.add("CAMERA_MIN_E", int_t, 0, "Minimum exposure time when AEC enabled", 0, 0, 480)
 gen.add("CAMERA_MAX_E", int_t, 0, "Maximum exposure time when AEC enabled", 378, 0, 480)
 gen.add("CAMERA_AUTOG", bool_t, 0, "Enable auto exposure AEC function.", True)
-gen.add("CAMERA_GAIN", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
 gen.add("PRIMARY_CAM_MODE", bool_t, 0, "Enable primary camera pair mode.", False)
 gen.add("CAMERA_TILE", bool_t, 0, "Enable camera tile mode", False)
 gen.add("STEREO_BAYER_D", bool_t, 0, "Disable bayer pattern removal", False)
 gen.add("ADIS_IMU", bool_t, 0, "Enable the external IMU.", False);
 
 
-#flip parameters for all 9 cameras
+#flip parameters for all 10 cameras
 gen.add("CAMERA_0_HFLIP", bool_t, 0, "Enable horizontal image flip", False)
 gen.add("CAMERA_0_VFLIP", bool_t, 0, "Enable vertical image flip.", False)
 gen.add("CAMERA_1_HFLIP", bool_t, 0, "Enable horizontal image flip", False)
@@ -41,6 +39,28 @@ gen.add("CAMERA_8_VFLIP", bool_t, 0, "Enable vertical image flip.", False)
 gen.add("CAMERA_9_HFLIP", bool_t, 0, "Enable horizontal image flip", False)
 gen.add("CAMERA_9_VFLIP", bool_t, 0, "Enable vertical image flip.", False)
 
+#exposure parameters for all 10 cameras
+gen.add("CAMERA_EXP_CAM0", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM1", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM2", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM3", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM4", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM5", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM6", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM7", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM8", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+gen.add("CAMERA_EXP_CAM9", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
+
+gen.add("CAMERA_GAIN_CAM0", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM1", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM2", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM3", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM4", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM5", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM6", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM7", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM8", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_GAIN_CAM9", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
 
 #stereo parameter for all 5 pairs
 gen.add("STEREO_TH_CAM1", int_t, 0, "Disparity matching threshold value", 140, 0, 255)
