renamed gain params

--- a/cfg/uvc_ros_driver_node.cfg
+++ b/cfg/uvc_ros_driver_node.cfg
@@ -51,16 +51,16 @@ gen.add("CAMERA_EXP_CAM7", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 
 gen.add("CAMERA_EXP_CAM8", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
 gen.add("CAMERA_EXP_CAM9", int_t, 0, "Exposure time when AEC disabled.", 40, 0, 480)
 
-gen.add("CAMERA_GAIN_CAM0", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM1", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM2", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM3", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM4", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM5", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM6", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM7", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM8", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
-gen.add("CAMERA_GAIN_CAM9", int_t, 0, "Exposure time when AEC disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM0", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM1", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM2", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM3", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM4", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM5", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM6", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM7", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM8", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
+gen.add("CAMERA_G_CAM9", int_t, 0, "Gain when AEG disabled.", 16, 16, 64)
 
 #stereo parameter for all 5 pairs
 gen.add("STEREO_TH_CAM1", int_t, 0, "Disparity matching threshold value", 140, 0, 255)
