--- a/launch/rqt_config/param_config.yaml
+++ b/launch/rqt_config/param_config.yaml
@@ -23,26 +23,26 @@ dictitems:
   CAMERA_9_VFLIP: true
   CAMERA_AUTOEXP: false
   CAMERA_AUTOG: false
-  CAMERA_EXP_CAM0: 40
-  CAMERA_EXP_CAM1: 40
-  CAMERA_EXP_CAM2: 40
-  CAMERA_EXP_CAM3: 40
-  CAMERA_EXP_CAM4: 40
-  CAMERA_EXP_CAM5: 40
-  CAMERA_EXP_CAM6: 40
-  CAMERA_EXP_CAM7: 40
-  CAMERA_EXP_CAM8: 40
-  CAMERA_EXP_CAM9: 40
-  CAMERA_GAIN_CAM0: 16
-  CAMERA_GAIN_CAM1: 16
-  CAMERA_GAIN_CAM2: 16
-  CAMERA_GAIN_CAM3: 16
-  CAMERA_GAIN_CAM4: 16
-  CAMERA_GAIN_CAM5: 16
-  CAMERA_GAIN_CAM6: 16
-  CAMERA_GAIN_CAM7: 16
-  CAMERA_GAIN_CAM8: 16
-  CAMERA_GAIN_CAM9: 16
+  CAMERA_EXP_CAM0: 340
+  CAMERA_EXP_CAM1: 340
+  CAMERA_EXP_CAM2: 340
+  CAMERA_EXP_CAM3: 340
+  CAMERA_EXP_CAM4: 340
+  CAMERA_EXP_CAM5: 340
+  CAMERA_EXP_CAM6: 340
+  CAMERA_EXP_CAM7: 340
+  CAMERA_EXP_CAM8: 340
+  CAMERA_EXP_CAM9: 340
+  CAMERA_G_CAM0: 16
+  CAMERA_G_CAM1: 16
+  CAMERA_G_CAM2: 16
+  CAMERA_G_CAM3: 16
+  CAMERA_G_CAM4: 16
+  CAMERA_G_CAM5: 16
+  CAMERA_G_CAM6: 16
+  CAMERA_G_CAM7: 16
+  CAMERA_G_CAM8: 16
+  CAMERA_G_CAM9: 16
   CAMERA_MAX_E: 378
   CAMERA_MIN_E: 0
   CAMERA_TILE: true
