added modified files for correct camera_info messages

--- a/launch/rqt_config/param_config.yaml
+++ b/launch/rqt_config/param_config.yaml
@@ -21,8 +21,8 @@ dictitems:
   CAMERA_8_VFLIP: false
   CAMERA_9_HFLIP: true
   CAMERA_9_VFLIP: true
-  CAMERA_AUTOEXP: false
-  CAMERA_AUTOG: false
+  CAMERA_AUTOEXP: true
+  CAMERA_AUTOG: true
   CAMERA_EXP_CAM0: 340
   CAMERA_EXP_CAM1: 340
   CAMERA_EXP_CAM2: 340
@@ -43,7 +43,7 @@ dictitems:
   CAMERA_G_CAM7: 16
   CAMERA_G_CAM8: 16
   CAMERA_G_CAM9: 16
-  CAMERA_MAX_E: 378
+  CAMERA_MAX_E: 480
   CAMERA_MIN_E: 0
   CAMERA_TILE: true
   PRIMARY_CAM_MODE: false
